# astronomer

./: .codeclimate.yml  .drone.yml  .gitignore  .helmignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONFIG_PATH_MIGRATION.md  Chart.yaml  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  SPEC.md  UPDATING.md  airflowvalues.yaml  config.tpl.yaml  current-values.yaml  currentvalues.yaml  default_chart_data.yaml  image.md  import_docker_images.py  metadata.yaml  package.json  pyproject.toml  requirements-chart-tests.txt  requirements.yaml  values.schema.json  values.schema.json.example  values.yaml  vector-ds3.yaml  vector-working.yaml
.circleci/: config.yml  config.yml.j2  endorignore  generate_circleci_config.py  trivyignore
.clair/: whitelist.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
charts/: _helpers.tpl
configs/: always-pull.yaml  dev.yaml  disable-airflow-operator.yaml  disable-logging.yaml  disable-monitoring.yaml  dp-link-tests.yaml  enable-all-features-control.yaml  enable-all-features-data.yaml  enable-auth-sidecar.yaml  enable-git-sync-deploys.yaml  enable-psa.yaml  failover-eks-dev.yaml  failover-enabled.yaml  failover-local-dev.yaml  flightdeck-tests.yaml  fluentd-s3.yaml  gke.yaml  iks.yaml  istio-gateway.yaml  k3d-local-scenario.yaml  local-1x.yaml  local-2x.yaml  local-dev-ha.yaml  local-dev-reduce-resources.yaml  local-dev.yaml  local-main.yaml  local-node-hosts-daemonset.yaml  master.yaml  mysql-manifest.yaml  nginx-only.yaml  (+11 more)
(+2260 files in other folders)
